<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Common -->
    <string name="common_btnOk">Ok</string>
    <string name="common_btnYes">Yes</string>
    <string name="common_btnNo">No</string>
    <string name="common_btnCancel">Cancel</string>
    <string name="common_mnuSave">Save</string>
    <string name="common_mnuCancel">Cancel</string>
    <string name="common_msg_genericError">Generic error: %s</string>
    <string name="common_msg_cannotsavepreferences">Sorry, cannot save data: </string>
    <string name="common_msg_executingCommand">Executing command...</string>
    <string name="common_msg_appExpired">Sorry, activity expired :(</string>
    <string name="common_msg_noReplyFromProvider">No reply from provider. Retry again, maybe the provider has problem or is down...</string>
    <string name="common_msg_cannotSaveProviderData">Cannot save provider data:\n%s\n\nPlease, report this error to the developer.</string>
    <string name="common_msg_cannotLoadProviderData">Cannot load provider data:\n%s\n\nPlease, report this error to the developer.</string>
    <string name="common_msg_communicationError">Generic communication error:\n%s\n\nNetwork issues, or maybe the provider has problem or is down...</string>
    <string name="common_msg_architecturalError">Inner application error:\n%s\n\nPlease, report it to the developer.</string>
    <string name="common_msg_noCredentials">No credentials supplied.\nInsert them in the settings of provider or service.</string>
    



    <!-- ActSendSms -->
    <string name="actsendsms_title">%s - Send SMS</string>
    <string name="actsendsms_txtDestination">Destionation number</string>
    <string name="actsendsms_txtBody">Message</string>
    <string name="actsendsms_btnSend">Send</string>
    <string name="actsendsms_lblProviderMulti">Choose a provider and one of it\'s services</string>
    <string name="actsendsms_lblProviderSingle">Choose a provider</string>
    <string name="actsendsms_spiProvidersPrompt">Choose a provider</string>
    <string name="actsendsms_spiServicesPrompt">Choose a service</string>
    <string name="actsendsms_dlgPickNumber">Choose service</string>
    <string name="actsendsms_mnuSignature">Append signature</string>
    <string name="actsendsms_mnuCompress">Compress Text</string>
    <string name="actsendsms_mnuSettings">Settings</string>
    <string name="actsendsms_mnuResetData">Empty fields</string>
    <string name="actsendsms_mnuAbout">About</string>
    <string name="actsendsms_menuExit">Exit</string>
    <string name="actsendsms_msg_noPhoneNumber">No phone numbers for selected contact...</string>
    <string name="actsendsms_msg_noProviderSelected">Choose a provider...</string>
    <string name="actsendsms_msg_noSubserviceSelected">Choose a provider\'s service...</string>
    <string name="actsendsms_msg_noDestination">Enter a phone number as destination...</string>
    <string name="actsendsms_msg_wrongDestination">Enter a valid phone number as destination...</string>
    <string name="actsendsms_msg_noMessage">Enter a message...</string>
    <string name="actsendsms_msg_messageTooLong">Message is too long...</string>
    <string name="actsendsms_msg_providerNotConfigured">%s provider not correctly configured, configure it in the Settings...</string>
    <string name="actsendsms_msg_subserviceNotConfigured">Service not configured, configure it in the Settings...</string>
    <string name="actsendsms_msg_subservicesNotPresent">No services for %s provider. Add them in the Settings...</string>
    <string name="actsendsms_msg_emptyCaptchaCode">Captcha code is empty.\nMessage sending aborted.</string>
    <string name="actsendsms_msg_sendingMessage">Sending message...</string>
    <string name="actsendsms_msg_sendingCaptcha">Sending captcha code...</string>
    <string name="actsendsms_msg_smsLimitReach">Sorry, you reach the daily maximum number of allowed attempts to send SMS of this Lite version...\n\nWant unlimited SMS and no banner? Buy the full version in the Android Market!</string>
    <string name="actsendsms_phoneType_home">Home</string>
    <string name="actsendsms_phoneType_mobile">Mob</string>
    <string name="actsendsms_phoneType_work">Work</string>
    <string name="actsendsms_phoneType_workfax">Work fax</string>
    <string name="actsendsms_phoneType_homefax">Home fax</string>
    <string name="actsendsms_phoneType_other">Other</string>

    


    <!-- ActSettingsMain -->
    <string name="actsettingsmain_title">%s - Settings</string>
    <string name="actsettingsmain_lblApplicationCategory">Application</string>
    <string name="actsettingsmain_lblProvidersCategory">Providers</string>
    <string name="actsettingsmain_chkResetDataAfterSend">Reset after send</string>
    <string name="actsettingsmain_chkResetDataAfterSendSummary">Clear destination and message after send sms</string>
    <string name="actsettingsmain_chkInsertSmsIntoPim">Insert SMS to phone list</string>
    <string name="actsettingsmain_chkInsertSmsIntoPimSummary">Insert the SMS into the list of phone sent sms</string>
    <string name="actsettingsmain_lblProvidersList">Providers settings</string>
    <string name="actsettingsmain_lblProvidersListSummary">Specify the configuration for each provider</string>
    <string name="actsettingsmain_txtSignature">Signature</string>
    <string name="actsettingsmain_txtSignatureSummary">Signature to use in the message</string>
    <string name="actsettingsmain_txtDefaultInternationalPrefix">Default prefix</string>
    <string name="actsettingsmain_txtDefaultInternationalPrefixSummary">Default international prefix to use when another prefix is not used</string>




    <!-- ActSettingsSmsService -->
    <string name="actsettingssmsservice_title">%s - Settings for %s</string>
    <string name="actsettingssmsservice_btnConfigureSubservices">Configure services</string>
	<string name="actsettingssmsservice_lblServiceName">Service name</string>    



    <!-- ActProvidersList -->
    <string name="actproviderslist_title">%s - Providers</string>




    <!-- ActTemplatesList -->
    <string name="acttemplateslist_title">%s - Choose a template</string>




    <!-- ActSubservicesList -->
    <string name="actsubserviceslist_title">%s - Services for %s</string>
    <string name="actsubserviceslist_lblNoSubservices">You don\'t have any service to display.\n\n To add services, press Menu and select\n\"Add new service\"</string>
    <string name="actsubserviceslist_mnuHeaderTitle">Choose action</string>
    <string name="actsubserviceslist_mnuDeleteService">Delete</string>
    <string name="actsubserviceslist_mnuAddService">Add new service</string>
    <string name="actsubserviceslist_mnuEditService">Edit</string>
    <string name="actsubserviceslist_msgNoTemplates">No templates available...\n\nYou should download them in order to add new services.</string>




    <!-- ActAbout -->
    <string name="actabout_title">%s - About</string>
    <string name="actabout_lblAuthor">by Alfredo Morresi</string>
    <string name="actabout_lblWebsite">Rainbowbreeze.it</string>
    <string name="actabout_lblDescription">Suggestions, translations, graphics ideas? Send me an email at info (at) rainbowbreeze.it\n\nA special thanks to:\n -Ilaria Mauric for the logo</string>
    <string name="actabout_lblSentSms">Attempts to send SMS today: %s</string>




    <!-- ActExpired -->
    <string name="actexpired_title">%s - Expired :(</string>
    <string name="actexpired_msgExpired">Sorry, this beta version of the application has expired.\n\n\nSearch for a new version of the application.</string>




    <!-- ActInitializationError -->
    <string name="actinitialization_title">%s - Initialization errors :(</string>
    <string name="actinitialization_msgErrors">Sorry, some initialization errors block this application...\n\nIf the problem persists, send an email to the author.\n\nThank you!</string>




    <!-- ActCompactMessage -->
    <string name="actcompactmessage_title">%s - Compact message</string>
    <string name="actcompactmessage_lblHelp">Select compress ratio of the message</string>
    <string name="actcompactmessage_lblStatus">Original length: %s - New: %s</string>




    <!-- DlgCaptch -->
    <string name="dlgcaptcha_title">Captcha request</string>
    <string name="dlgcaptcha_txtCodeHint">Insert captcha code</string>


</resources>
